remove xib files

--- a/DropboxTest/Assets/en.lproj/Localizable.strings
+++ b/DropboxTest/Assets/en.lproj/Localizable.strings
@@ -6,4 +6,5 @@
   Copyright © 2019 Arturo Murillo. All rights reserved.
 */
 
+"signIn" = "Sign in";
 "error" = "An error ocurred please try again later.";
