--- a/DropboxTest/Assets/es.lproj/Localizable.strings
+++ b/DropboxTest/Assets/es.lproj/Localizable.strings
@@ -6,4 +6,5 @@
   Copyright © 2019 Arturo Murillo. All rights reserved.
 */
 
+"signIn" = "Iniciar sesión";
 "error" = "Ocurrió un error intente de nuevo más tarde.";
