--- a/DropboxTest/Assets/en.lproj/Localizable.strings
+++ b/DropboxTest/Assets/en.lproj/Localizable.strings
@@ -7,4 +7,8 @@
 */
 
 "signIn" = "Sign in";
+"home" = "Dropbox";
+"files" = "Files";
+"logout" = "Logout";
+"email" = "Email";
 "error" = "An error ocurred please try again later.";
